@@ -1,3 +1,8 @@
+2015-01-09  Matteo Corti  <matteo@corti.li>
+
+	* check_tcptraffic: using Monitoring::Plugin instead of the
+	                    deprecated Nagios::Plugin
+
 2012-04-26  Matteo Corti  <matteo.corti@id.ethz.ch>
 
 	* check_tcptraffic: fixed the check on writability of the debug log file
